package gameLaby.laby;


/**
 * gere un personnage situe en x,y
 */
public class Aventurier extends Personnage {

    /**
     * constructeur
     *
     * @param dx position selon x
     * @param dy position selon y
     */
    public Aventurier(int dx, int dy) {
        super(dx,dy);
    }
}
