package gameLaby.laby;


/**
 * gere un personnage situe en x,y
 */
public class Monstre extends Personnage {

    /**
     * constructeur
     *
     * @param dx position selon x
     * @param dy position selon y
     */
    public Monstre(int dx, int dy) {
        super(dx,dy);
    }
}
